# Foundation3DDet

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  requirements.txt  script.txt
docs/: COORDINATE.md  DATA.md
opendet3d/: __init__.py
opendet3d/common/: parallel.py
opendet3d/eval/: detect3d.py  omni3d.py  open.py
opendet3d/model/: cut3r_tower.py
opendet3d/op/: match_cost.py  util.py
scripts/: demo.py  gen_hypersim_depth.py  gen_nusc_depth.py  lint.sh  run_eval.py
xtreme1/: 000000000139_depth.npy  000000000139_intrinsics.npy  000000000139_metadata.json  000000000285_depth.npy  000000000285_intrinsics.npy  000000000285_metadata.json  000000000632_depth.npy  000000000632_intrinsics.npy  000000000632_metadata.json  000000000724_depth.npy  000000000724_intrinsics.npy  000000000724_metadata.json  000000000776_depth.npy  000000000776_intrinsics.npy  000000000776_metadata.json  000000000785_depth.npy  000000000785_intrinsics.npy  000000000785_metadata.json  000000000802_depth.npy  000000000802_intrinsics.npy  000000000802_metadata.json  000000000872_depth.npy  000000000872_intrinsics.npy  000000000872_metadata.json  000000000885_depth.npy  000000000885_intrinsics.npy  000000000885_metadata.json  000000001000_depth.npy  000000001000_intrinsics.npy  000000001000_metadata.json  000000001268_depth.npy  000000001268_intrinsics.npy  000000001268_metadata.json  000000001296_depth.npy  000000001296_intrinsics.npy  000000001296_metadata.json  000000001353_depth.npy  000000001353_intrinsics.npy  000000001353_metadata.json  000000001425_depth.npy  (+58 more)
(+136 files in other folders)
